--- a/src/ScoreTable.css
+++ b/src/ScoreTable.css
@@ -5,7 +5,7 @@
   top: 40px;
   left: 30px;
   height: 25vh;
-  width: 20vh;
+  width: 25vh;
   border-collapse: collapse;
   margin-bottom: 80px;
   margin-top: 20px ;
